--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFE</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml"
+        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' fill='%231a1a1a'/%3E%3Cdefs%3E%3Cpattern id='grid' width='8' height='8' patternUnits='userSpaceOnUse'%3E%3Cpath d='M 8 0 L 0 0 0 8' fill='none' stroke='%232a2a2a' stroke-width='0.5'/%3E%3C/pattern%3E%3C/defs%3E%3Crect width='64' height='64' fill='url(%23grid)'/%3E%3Cg fill='%234a9eff'%3E%3Crect x='20' y='20' width='6' height='6' rx='1'/%3E%3Crect x='28' y='20' width='6' height='6' rx='1'/%3E%3Crect x='36' y='20' width='6' height='6' rx='1'/%3E%3Crect x='36' y='28' width='6' height='6' rx='1'/%3E%3Crect x='28' y='36' width='6' height='6' rx='1'/%3E%3C/g%3E%3C/svg%3E">
     <style>
         * {
             margin: 0;
@@ -626,6 +627,36 @@
         .preset-item .delete-preset svg {
             width: 18px;
             height: 18px;
+        }
+
+        .github-link {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+            width: 40px;
+            height: 40px;
+            background: rgba(0, 0, 0, 0.6);
+            border: 1px solid #444;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.2s;
+            backdrop-filter: blur(10px);
+            text-decoration: none;
+        }
+
+        .github-link:hover {
+            background: rgba(0, 0, 0, 0.8);
+            border-color: #666;
+            transform: scale(1.1);
+        }
+
+        .github-link svg {
+            width: 24px;
+            height: 24px;
+            fill: #fff;
         }
     </style>
 </head>
@@ -1914,6 +1945,14 @@
 
         gameLoop(0);
     </script>
+
+    <a href="https://github.com/tcboni/life" target="_blank" rel="noopener noreferrer" class="github-link"
+        data-tooltip="View on GitHub">
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M12 2C6.477 2 2 6.477 2 12c0 4.42 2.865 8.17 6.839 9.49.5.092.682-.217.682-.482 0-.237-.008-.866-.013-1.7-2.782.603-3.369-1.34-3.369-1.34-.454-1.156-1.11-1.463-1.11-1.463-.908-.62.069-.608.069-.608 1.003.07 1.531 1.03 1.531 1.03.892 1.529 2.341 1.087 2.91.831.092-.646.35-1.086.636-1.336-2.22-.253-4.555-1.11-4.555-4.943 0-1.091.39-1.984 1.029-2.683-.103-.253-.446-1.27.098-2.647 0 0 .84-.269 2.75 1.025A9.578 9.578 0 0112 6.836c.85.004 1.705.114 2.504.336 1.909-1.294 2.747-1.025 2.747-1.025.546 1.377.203 2.394.1 2.647.64.699 1.028 1.592 1.028 2.683 0 3.842-2.339 4.687-4.566 4.935.359.309.678.919.678 1.852 0 1.336-.012 2.415-.012 2.743 0 .267.18.578.688.48C19.138 20.167 22 16.418 22 12c0-5.523-4.477-10-10-10z" />
+        </svg>
+    </a>
 </body>
 
 </html>
